scrollbar-problem : fixed

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -40,7 +40,8 @@ body, html{
      padding:0;
      width:100%;
      height:100%;
-     overflow:hidden;
+     overflow-y:scroll;
+     overflow-x:hidden;
 }
 
 #page_wrapper{
